Fix spacing in landing to create even spacing with responsive sizing

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,39 @@ img {
     max-height: 100%;
 }
 
+body { 
+    min-width: 250px;
+}
+
+@media only screen and (max-width: 800px) and (max-height: 460px), (max-width: 460px) and (max-height: 800px) {
+    html {
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 600px) and (max-height: 460px), (max-width: 460px) and (max-height: 600px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 600px) and (max-height: 600px), (max-width: 500px), (max-height: 500px) {
+    html{
+        font-size: 14px;
+    } 
+}
+
+@media only screen and (max-width: 500px) and (max-height: 500px), (max-width: 400px), (max-height: 400px) {
+    html {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 400px) and (max-height: 400px), (max-width: 300px), (max-height: 300px) {
+    html {
+        font-size: 10px;
+    }
+}
 
 
 /* Heading and Navigation styles */
@@ -47,8 +80,10 @@ header {
     position: fixed;
     top: 0px;
     width: 100%;
+    max-width: 100vw;
     height: 3.75rem;
     z-index: 5;
+    background-color: rgb(255, 255, 254);
 }
 
 nav {
@@ -60,6 +95,7 @@ nav {
 
 header h2 {
     padding: 1rem 0rem 1rem 2rem;
+    font-size: 1.5rem;
 }
 
 .nav-link {
@@ -95,7 +131,6 @@ header h2 {
 
     nav {
         padding-right: 0.5rem;
-        font-size: 0.65rem;
     }
 }
 
@@ -105,6 +140,14 @@ header h2 {
 
 main {
     margin-top: 3.73rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.4rem;
 }
 
 .row-flex {
@@ -140,14 +183,9 @@ hr {
 #landing {
     line-height: 1.5;
     height: calc(100vh - 3.75rem);
-    min-height: 400px;
-}
-
-.split-screen {
-    min-height: 35rem;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-    width: 50%;
+    min-height: 250px;
+    width: 100%;
+    justify-content: space-evenly;
 }
 
 .circle-img {
@@ -156,14 +194,8 @@ hr {
     opacity: 0.95;
 }
 
-#doodle {
-    width: 25rem;
-    height: 25rem;
-}
-
 #intro {
-    margin-left: 6rem;
-    margin-right: 1rem;
+    width: 45vw;
     align-items: start;
 }
 
@@ -173,86 +205,80 @@ hr {
     margin-bottom: 2rem;
 }
 
+#intro p {
+    font-size: 1.2rem;
+}
+
 .emphasis {
     font-size: 1.2rem;
     font-weight: bold;
 }
 
-@media only screen and (max-width: 750px) {
-    #doodle {
-        width: 20rem;
-        height: 20rem;
-    }
+#doodle {
+    width: 30vw;
+    padding-bottom: 2rem;
+}
 
-    #intro {
-        margin-left: 4rem;
-    }
+@media only screen and (max-width: 800px), (max-height: 800px){
 
     #intro h1 {
         font-size: 3rem;
         margin-bottom: 1.5rem;
     }
+
+    #intro p, .emphasis {
+        font-size: 1rem;
+    }
 }
 
-@media only screen and (max-width: 580px) {
-    #doodle {
-        width: 12rem;
-        height: 20rem;
-    }
-
-    #intro {
-        margin-left: 2rem;
-    }
-
+@media only screen and (max-width: 600px), (max-height: 600px) {
     #intro h1 {
         font-size: 2.5rem;
     }
 }
 
-@media only screen and (max-width: 480px) {
-    #doodle {
-        width: 15rem;
-        height: 15rem;        
-    }
-
-    #intro {
-        padding-bottom: 3rem;
-    }
-}
-
-@media only screen and (max-width: 350px) {
-    #doodle {
-        width: 12rem;
-        height: 12rem;        
-    }
-
+@media only screen and (max-width: 400px), (max-height: 400px) {
     #intro h1 {
-        font-size: 2rem;
+        font-size: 2.125rem;
     }
-
-    #intro p, .emphasis {
-        font-size: 14px;
-    }
-
 }
 
 @media (orientation: portrait) {
     #landing {
-        flex-direction: column-reverse;
+        flex-direction: column-reverse;     /* put doodle on top*/
     }
 
-    .split-screen {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        min-height: 12rem;
+    #doodle {
+        width: min(70vw, 45vh);
+        max-height: 45vh;
+        padding-bottom: 0;
+    }
+
+    #doodle-circle {
+        max-width: 100%;
+        height: 100%;
     }
 
     #intro {
-        width: 70%;
-        padding-bottom: 3rem;
+        width: 70vw;
     }
-  }
+}
 
+@media only screen and (max-width: 250px), (max-height: 380px) {
+    #doodle {
+        width: min(70vw, 40vh);
+        max-height: 40vh;
+        padding-bottom: 0;
+    }
+
+    #intro h1 {
+        font-size: 1.8rem;
+    }
+
+    #intro p, .emphasis {
+        font-size: 0.8rem;
+    }
+}
 
 /* Portfolio Styling */
 
